# sorayia-backend

./: .env  manage.py  pyproject.toml  render.yaml  requirements.txt  ressource.txt  services.json
SorayiaAPI/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
app/: consumers.py  data.py  helpers.py  managers.py  models.py  urls.py  views.py
app/auth/: serializers.py  views.py
app/bot/: serializers.py  views.py
app/migrations/: 0001_initial.py  0002_alter_bot_created_at_alter_user_created_at.py  0003_chat_created_at_chat_update_at_file_created_at_and_more.py  0004_rename_folder_bot_folders_remove_bot_description_and_more.py  0005_alter_bot_created_at_alter_chat_created_at_and_more.py  0006_bot_description_bot_split_url_alter_bot_created_at_and_more.py  0007_alter_bot_avatar_alter_bot_created_at_and_more.py  0008_avatar_remove_bot_avatar_bot_prompt_and_more.py  0009_alter_bot_created_at_alter_chat_created_at_and_more.py  0010_bot_avatar_alter_bot_created_at_and_more.py  0011_chat_name_alter_bot_created_at_alter_chat_created_at_and_more.py  0012_chat_messages_alter_bot_created_at_and_more.py
app/templates/: services.json
app/templates/app/: EmailConfirmation.html
